@@ -1,1 +1,1 @@
-Year,"Input total (water, mm)",Anet total per Leaf Area (mmol yr-1 m-2),E total (mm yr-1 (cubic mm per square mm ground area per year)),PLC whole plant max,PLC xylem max,k whole plant min,k xylem min (kghr-1m-2),ET total (mm yr-1 (cubic mm per square mm ground area per year)),Rain?,gWater?,fraction of field capacity (starting condition),ground water distance below root layers,Hrs PLC > 85,BA:GA (m2/ha),LA:BA (m2/m2),Mean PLC whole plant,,,prev GS end water content (mm),prev offseason input (mm),prev offseason end content (mm),GS start water content (mm),GS input (mm),GS end water content (mm),num NR fails,avg water content during NR fail (mm),max water content during NR fail (mm),,mean ci/ca,,A weighted ci (Pa),(A weighted ci) / ca
+Year,"Input total (water, mm)",Anet total per Leaf Area (mmol yr-1 m-2),E total (mm yr-1 (cubic mm per square mm ground area per year)),PLC whole plant max,PLC xylem max,k whole plant min,k xylem min (kghr-1m-2),ET total (mm yr-1 (cubic mm per square mm ground area per year)),Rain?,gWater?,fraction of field capacity (starting condition),ground water distance below root layers,Hrs PLC > 85,BA:GA (m2/ha),LA:BA (m2/m2),Mean PLC whole plant,,,prev GS end water content (mm),prev offseason input (mm),prev offseason end content (mm),GS start water content (mm),GS input (mm),GS end water content (mm),num NR fails,avg water content during NR fail (mm),max water content during NR fail (mm),,mean ci/ca,,A weighted ci (Pa),(A weighted ci) / ca,,root_p50,stem_p50
