@@ -1,3 +1,3 @@
 soil,soil,soil,climate,climate,climate,hydraulics,hydraulics,hydraulics,hydraulics,baga,baga,baga,baga,baga,baga,community,community,forcing_files,forcing_files,forcing_files,forcing_files,NULL
 i_gWaterEnable,i_soilRedEnable,i_soilEvapEnable,i_rainEnable,i_useGSDataStress,i_useGSDataOpt,i_refilling,i_predawnsMode,i_cavitFatigue,i_stemOnly,i_iter_gwEnable,i_iter_ffcEnable,i_iter_bagaEnable,i_iter_useAreaTable,i_iter_yearsAsCount,i_iter_runSupplyCurve,i_multipleSP,i_speciesN,i_ClimateData,i_GSData,i_dataheader,i_sumheader,NULL
-n,y,y,y,y,y,n,n,n,y,n,n,n,n,n,n,n,1,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/dev/garisom/03_test_data/climate_forcing_files/dataset.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/dev/garisom/03_test_data/climate_forcing_files/seasonlimits_2.0.0.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/dev/garisom/02_program_code/dataheader.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/dev/garisom/02_program_code/sumheader.csv,NULL
+n,y,y,y,y,y,n,n,y,n,n,n,n,n,n,n,n,1,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/garisom/03_test_data/climate_forcing_files/dataset.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/garisom/03_test_data/climate_forcing_files/seasonlimits_2.0.0.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/garisom/02_program_code/dataheader.csv,/Users/ger/Library/CloudStorage/Dropbox/UOUtah/2022_Cavitation_fatigue/garisom/02_program_code/sumheader.csv,NULL
