@@ -1,3 +1,6 @@
+09/24/2023 - "2.0.3"
+- Added lines of code to export yearly P50 values given damage in xylem from previous year
+
 09/21/2023 - "2.0.2"
 - Addition of R companion functions to prepare files, and the path-to-file cell for the dataheader.csv and the sumheader.csv in the configuration_2.0.0.csv file.
 
